[gd_scene load_steps=17 format=4 uid="uid://b4s14fqduhoby"]

[ext_resource type="Script" path="res://level.gd" id="1_v7btg"]
[ext_resource type="TileSet" uid="uid://fxiv4t4jhw3l" path="res://tiles.tres" id="2_gweau"]
[ext_resource type="PackedScene" uid="uid://bo1knu3vu8k1w" path="res://player.tscn" id="2_hjpl8"]
[ext_resource type="PackedScene" uid="uid://fmknwgsbikc0" path="res://Entities/Interactions/terminal.tscn" id="3_6rbj2"]
[ext_resource type="PackedScene" uid="uid://c1lc3t7sk4pdm" path="res://hud.tscn" id="3_dcj0v"]
[ext_resource type="PackedScene" uid="uid://dcbm3id1edfss" path="res://Entities/Collectibles/Gems/emerald_cut/energyCell.tscn" id="3_vr2fn"]
[ext_resource type="PackedScene" uid="uid://dii826ss7vipp" path="res://coin.tscn" id="4_f85k4"]
[ext_resource type="PackedScene" uid="uid://b744lydr82tfg" path="res://UI/Energy Bar/bars.tscn" id="4_h7y03"]
[ext_resource type="PackedScene" uid="uid://bn3pxhr6lroty" path="res://Entities/Traps/lightningtrap.tscn" id="6_8kqr7"]
[ext_resource type="PackedScene" uid="uid://ddqqrtbjuoayg" path="res://Entities/NPCs/robotnpc.tscn" id="6_e6ugf"]
[ext_resource type="PackedScene" uid="uid://bg8c4lh5ea6s" path="res://door.tscn" id="7_tajpv"]
[ext_resource type="PackedScene" uid="uid://cgych3jgq5y5" path="res://note.tscn" id="7_vodip"]
[ext_resource type="PackedScene" uid="uid://bratjbxqjmj7g" path="res://UI/Textbox/textbox.tscn" id="10_w0wpa"]
[ext_resource type="PackedScene" uid="uid://dlcsihei1ildi" path="res://Journal/journal_page.tscn" id="12_bdk26"]
[ext_resource type="PackedScene" uid="uid://dhf3whjnto8yy" path="res://pause_menu.tscn" id="12_dtm37"]
[ext_resource type="PackedScene" uid="uid://b5cwmwv0ribob" path="res://Minigames/pipeconnect/pipeconect.tscn" id="12_sa43d"]

[node name="lvl2" type="Node2D"]
script = ExtResource("1_v7btg")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)

[node name="TileMapBg" type="TileMapLayer" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(1, 1, 1, 0.211765)
z_index = -1
tile_set = ExtResource("2_gweau")
collision_enabled = false

[node name="TileMapTexture" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAA8ABwAPAAkAAAAEABAABwASAAUAAAAEABEABwAPAAcAAAAEABIABwAPAAgAAAAEABMABwAPAAkAAAAEABQABwASAAUAAAAFAA8ABwAQAAkAAAAFABAABwATAAUAAAAFABEABwAQAAcAAAAFABIABwAQAAgAAAAFABMABwAQAAkAAAAFABQABwATAAUAAAAGAA8ABwAPAAYAAAAGABAABwAPAAcAAAAGABEABwARAAcAAAAGABIABwAPAAUAAAAGABMABwAPAAYAAAAGABQABwAPAAcAAAAHAA8ABwAQAAYAAAAHABAABwAQAAcAAAAHABEABwASAAcAAAAHABIABwAQAAUAAAAHABMABwAQAAYAAAAHABQABwAQAAcAAAAIAA8ABwARAAYAAAAIABAABwARAAcAAAAIABEABwATAAcAAAAIABIABwARAAUAAAAIABMABwARAAYAAAAIABQABwARAAcAAAAJAA8ABwASAAYAAAAJABAABwASAAcAAAAJABEABwAPAAkAAAAJABIABwASAAUAAAAJABMABwASAAYAAAAJABQABwASAAcAAAAKAA8ABwAPAAkAAAAKABAABwASAAUAAAAKABEABwAQAAkAAAAKABIABwATAAUAAAAKABMABwATAAYAAAAKABQABwATAAcAAAAEAAsABwAPAAUAAAAEAAwABwAPAAYAAAAEAA0ABwAPAAcAAAAEAA4ABwAPAAgAAAAFAAsABwAQAAUAAAAFAAwABwAQAAYAAAAFAA0ABwAQAAcAAAAFAA4ABwAQAAgAAAAGAAsABwARAAUAAAAGAAwABwARAAYAAAAGAA0ABwARAAcAAAAGAA4ABwAPAAUAAAAHAAsABwASAAUAAAAHAAwABwASAAYAAAAHAA0ABwASAAcAAAAHAA4ABwAQAAUAAAAIAAsABwATAAUAAAAIAAwABwATAAYAAAAIAA0ABwATAAcAAAAIAA4ABwARAAUAAAAJAAsABwAPAAcAAAAJAAwABwAPAAgAAAAJAA0ABwAPAAkAAAAJAA4ABwASAAUAAAAKAAsABwAPAAUAAAAKAAwABwAPAAYAAAAKAA0ABwAPAAcAAAAKAA4ABwAPAAgAAAALAAsABwAQAAUAAAALAAwABwAQAAYAAAALAA0ABwAQAAcAAAALAA4ABwAQAAgAAAALAA8ABwAPAAUAAAALABAABwAPAAYAAAAMAAsABwARAAUAAAAMAAwABwARAAYAAAAMAA0ABwARAAcAAAAMAA4ABwAPAAUAAAAMAA8ABwAQAAUAAAAMABAABwAQAAYAAAANAAsABwASAAUAAAANAAwABwASAAYAAAANAA0ABwASAAcAAAANAA4ABwAQAAUAAAANAA8ABwARAAUAAAANABAABwARAAYAAAAOAAsABwATAAUAAAAOAAwABwATAAYAAAAOAA0ABwATAAcAAAAOAA4ABwARAAUAAAAOAA8ABwASAAUAAAAOABAABwASAAYAAAAPAAsABwAPAAcAAAAPAAwABwAPAAgAAAAPAA0ABwAPAAkAAAAPAA4ABwASAAUAAAAPAA8ABwAPAAUAAAAPABAABwAPAAYAAAAQAAsABwAPAAUAAAAQAAwABwAPAAYAAAAQAA0ABwAPAAcAAAAQAA4ABwAPAAgAAAAQAA8ABwAPAAkAAAAQABAABwASAAUAAAALABEABwAPAAcAAAALABIABwAPAAgAAAALABMABwAPAAkAAAALABQABwASAAUAAAAMABEABwAQAAcAAAAMABIABwAQAAgAAAAMABMABwAQAAkAAAAMABQABwATAAUAAAANABEABwARAAcAAAANABIABwAPAAUAAAANABMABwAPAAYAAAANABQABwAPAAcAAAAOABEABwASAAcAAAAOABIABwAQAAUAAAAOABMABwAQAAYAAAAOABQABwAQAAcAAAAPABEABwAPAAcAAAAPABIABwAPAAgAAAAPABMABwAPAAkAAAAPABQABwASAAUAAAAQABEABwAQAAcAAAAQABIABwAQAAgAAAAQABMABwAQAAkAAAAQABQABwATAAUAAAARAA8ABwAQAAkAAAARABAABwATAAUAAAARABEABwARAAcAAAARABIABwAPAAUAAAARABMABwAPAAYAAAARABQABwAPAAcAAAASAA8ABwAPAAYAAAASABAABwAPAAcAAAASABEABwASAAcAAAASABIABwAQAAUAAAASABMABwAQAAYAAAASABQABwAQAAcAAAATAA8ABwAQAAYAAAATABAABwAQAAcAAAATABEABwATAAcAAAATABIABwARAAUAAAATABMABwARAAYAAAATABQABwARAAcAAAAUAA8ABwARAAYAAAAUABAABwARAAcAAAAUABEABwAPAAkAAAAUABIABwASAAUAAAAUABMABwASAAYAAAAUABQABwASAAcAAAAVAA8ABwASAAYAAAAVABAABwASAAcAAAAVABEABwAQAAkAAAAVABIABwATAAUAAAAVABMABwATAAYAAAARAAsABwAQAAUAAAARAAwABwAQAAYAAAARAA0ABwAQAAcAAAARAA4ABwAQAAgAAAASAAsABwARAAUAAAASAAwABwARAAYAAAASAA0ABwARAAcAAAASAA4ABwAPAAUAAAATAAsABwASAAUAAAATAAwABwASAAYAAAATAA0ABwASAAcAAAATAA4ABwAQAAUAAAAUAAsABwATAAUAAAAUAAwABwATAAYAAAAUAA0ABwATAAcAAAAUAA4ABwARAAUAAAAVAAsABwAPAAcAAAAVAAwABwAPAAgAAAAVAA0ABwAPAAkAAAAVAA4ABwASAAUAAAAWAAsABwAPAAUAAAAWAAwABwAPAAYAAAAWAA0ABwAPAAcAAAAWAA4ABwAPAAgAAAAWAA8ABwAPAAkAAAAWABAABwASAAUAAAAXAAsABwAQAAUAAAAXAAwABwAQAAYAAAAXAA0ABwAQAAcAAAAXAA4ABwAQAAgAAAAXAA8ABwAQAAkAAAAXABAABwATAAUAAAAYAAsABwARAAUAAAAYAAwABwARAAYAAAAYAA0ABwARAAcAAAAYAA4ABwAPAAUAAAAYAA8ABwAPAAYAAAAYABAABwAPAAcAAAAZAAsABwASAAUAAAAZAAwABwASAAYAAAAZAA0ABwASAAcAAAAZAA4ABwAQAAUAAAAZAA8ABwAQAAYAAAAZABAABwAQAAcAAAAaAAsABwAPAAUAAAAaAAwABwAPAAYAAAAaAA0ABwAPAAcAAAAaAA4ABwAPAAgAAAAaAA8ABwAPAAkAAAAaABAABwASAAUAAAAbAAsABwAQAAUAAAAbAAwABwAQAAYAAAAbAA0ABwAQAAcAAAAbAA4ABwAQAAgAAAAbAA8ABwAQAAkAAAAbABAABwATAAUAAAAcAAsABwARAAUAAAAcAAwABwARAAYAAAAcAA0ABwARAAcAAAAcAA4ABwAPAAUAAAAcAA8ABwAPAAYAAAAcABAABwAPAAcAAAAdAAsABwASAAUAAAAdAAwABwASAAYAAAAdAA0ABwASAAcAAAAdAA4ABwAQAAUAAAAdAA8ABwAQAAYAAAAdABAABwAQAAcAAAAeAAsABwATAAUAAAAeAAwABwATAAYAAAAeAA0ABwATAAcAAAAeAA4ABwARAAUAAAAeAA8ABwARAAYAAAAeABAABwARAAcAAAAfAAsABwAPAAUAAAAfAAwABwAPAAYAAAAfAA0ABwAPAAcAAAAfAA4ABwAPAAgAAAAfAA8ABwAPAAkAAAAfABAABwASAAUAAAAgAAsABwAQAAUAAAAgAAwABwAQAAYAAAAgAA0ABwAQAAcAAAAgAA4ABwAQAAgAAAAgAA8ABwAQAAkAAAAgABAABwATAAUAAAAhAAsABwARAAUAAAAhAAwABwARAAYAAAAhAA0ABwARAAcAAAAhAA4ABwAPAAUAAAAhAA8ABwAPAAYAAAAhABAABwAPAAcAAAAiAAsABwASAAUAAAAiAAwABwASAAYAAAAiAA0ABwASAAcAAAAiAA4ABwAQAAUAAAAiAA8ABwAQAAYAAAAiABAABwAQAAcAAAAjAAsABwATAAUAAAAjAAwABwATAAYAAAAjAA0ABwATAAcAAAAjAA4ABwARAAUAAAAjAA8ABwARAAYAAAAjABAABwARAAcAAAAkAAsABwAPAAcAAAAkAAwABwAPAAgAAAAkAA0ABwAPAAkAAAAkAA4ABwASAAUAAAAkAA8ABwASAAYAAAAkABAABwASAAcAAAAlAAsABwAQAAcAAAAlAAwABwAQAAgAAAAlAA0ABwAQAAkAAAAlAA4ABwATAAUAAAAlAA8ABwATAAYAAAAlABAABwATAAcAAAAmAAsABwAPAAUAAAAmAAwABwAPAAYAAAAmAA0ABwAPAAcAAAAmAA4ABwAPAAgAAAAmAA8ABwAPAAkAAAAmABAABwASAAUAAAAnAAsABwAQAAUAAAAnAAwABwAQAAYAAAAnAA0ABwAQAAcAAAAnAA4ABwAQAAgAAAAnAA8ABwAQAAkAAAAnABAABwATAAUAAAAoAAsABwARAAUAAAAoAAwABwARAAYAAAAoAA0ABwARAAcAAAAoAA4ABwAPAAUAAAAoAA8ABwAPAAYAAAAoABAABwAPAAcAAAApAAsABwASAAUAAAApAAwABwASAAYAAAApAA0ABwASAAcAAAApAA4ABwAQAAUAAAApAA8ABwAQAAYAAAApABAABwAQAAcAAAAqAAsABwATAAUAAAAqAAwABwATAAYAAAAqAA0ABwATAAcAAAAqAA4ABwARAAUAAAAqAA8ABwARAAYAAAAqABAABwARAAcAAAArAAsABwAPAAcAAAArAAwABwAPAAgAAAArAA0ABwAPAAkAAAArAA4ABwASAAUAAAArAA8ABwASAAYAAAArABAABwASAAcAAAAsAAsABwAQAAcAAAAsAAwABwAQAAgAAAAsAA0ABwAQAAkAAAAsAA4ABwATAAUAAAAsAA8ABwATAAYAAAAsABAABwATAAcAAAAtAAsABwAPAAUAAAAtAAwABwAPAAYAAAAtAA0ABwAPAAcAAAAtAA4ABwAPAAgAAAAtAA8ABwAPAAkAAAAtABAABwASAAUAAAAuAAsABwAQAAUAAAAuAAwABwAQAAYAAAAuAA0ABwAQAAcAAAAuAA4ABwAQAAgAAAAuAA8ABwAPAAUAAAAuABAABwAPAAYAAAAvAAsABwARAAUAAAAvAAwABwARAAYAAAAvAA0ABwARAAcAAAAvAA4ABwAPAAUAAAAvAA8ABwAQAAUAAAAvABAABwAQAAYAAAAwAAsABwASAAUAAAAwAAwABwASAAYAAAAwAA0ABwASAAcAAAAwAA4ABwAQAAUAAAAwAA8ABwARAAUAAAAwABAABwARAAYAAAAxAAsABwATAAUAAAAxAAwABwATAAYAAAAxAA0ABwATAAcAAAAxAA4ABwARAAUAAAAxAA8ABwASAAUAAAAxABAABwASAAYAAAAyAAsABwAPAAcAAAAyAAwABwAPAAgAAAAyAA0ABwAPAAkAAAAyAA4ABwASAAUAAAAyAA8ABwATAAUAAAAyABAABwATAAYAAAAzAAsABwAPAAcAAAAzAAwABwAPAAgAAAAzAA0ABwAPAAkAAAAzAA4ABwASAAUAAAAzAA8ABwAPAAcAAAAzABAABwAPAAgAAAAuABEABwAPAAcAAAAuABIABwAPAAgAAAAuABMABwAPAAkAAAAuABQABwASAAUAAAAvABEABwAQAAcAAAAvABIABwAQAAgAAAAvABMABwAQAAkAAAAvABQABwATAAUAAAAwABEABwARAAcAAAAwABIABwAPAAUAAAAwABMABwAPAAYAAAAwABQABwAPAAcAAAAxABEABwASAAcAAAAxABIABwAQAAUAAAAxABMABwAQAAYAAAAxABQABwAQAAcAAAAyABEABwATAAcAAAAyABIABwARAAUAAAAyABMABwARAAYAAAAyABQABwARAAcAAAAzABEABwAPAAkAAAAzABIABwASAAUAAAAzABMABwASAAYAAAAzABQABwASAAcAAAA0AA8ABwAQAAcAAAA0ABAABwAQAAgAAAA0ABEABwAQAAkAAAA0ABIABwATAAUAAAA0ABMABwATAAYAAAA0ABQABwATAAcAAAA1AA8ABwAPAAUAAAA1ABAABwAPAAYAAAA1ABEABwAPAAcAAAA1ABIABwAPAAgAAAA1ABMABwAPAAkAAAA1ABQABwASAAUAAAA2AA8ABwAQAAUAAAA2ABAABwAQAAYAAAA2ABEABwAQAAcAAAA2ABIABwAQAAgAAAA2ABMABwAQAAkAAAA2ABQABwATAAUAAAA3AA8ABwARAAUAAAA3ABAABwARAAYAAAA3ABEABwARAAcAAAA3ABIABwAPAAUAAAA3ABMABwAPAAYAAAA3ABQABwAPAAcAAAA4AA8ABwASAAUAAAA4ABAABwASAAYAAAA4ABEABwASAAcAAAA4ABIABwAQAAUAAAA4ABMABwAQAAYAAAA4ABQABwAQAAcAAAA5AA8ABwAPAAUAAAA5ABAABwAPAAYAAAA5ABEABwAPAAcAAAA5ABIABwAPAAgAAAA5ABMABwAPAAkAAAA5ABQABwASAAUAAAA6AA8ABwAQAAUAAAA6ABAABwAQAAYAAAA6ABEABwAQAAcAAAA6ABIABwAQAAgAAAA6ABMABwAQAAkAAAA6ABQABwATAAUAAAA7AA8ABwARAAUAAAA7ABAABwARAAYAAAA7ABEABwARAAcAAAA7ABIABwAPAAUAAAA7ABMABwAPAAYAAAA7ABQABwAPAAcAAAA8AA8ABwASAAUAAAA8ABAABwASAAYAAAA8ABEABwASAAcAAAA8ABIABwAQAAUAAAA8ABMABwAQAAYAAAA8ABQABwAQAAcAAAA9AA8ABwATAAUAAAA9ABAABwATAAYAAAA9ABEABwATAAcAAAA9ABIABwARAAUAAAA9ABMABwARAAYAAAA9ABQABwARAAcAAAA+AA8ABwAPAAcAAAA+ABAABwAPAAgAAAA+ABEABwAPAAkAAAA+ABIABwASAAUAAAA+ABMABwASAAYAAAA+ABQABwASAAcAAAA/AA8ABwAQAAcAAAA/ABAABwAQAAgAAAA/ABEABwAQAAkAAAA/ABIABwATAAUAAAA/ABMABwATAAYAAAA/ABQABwATAAcAAAA5AAkABwAQAAcAAAA5AAoABwAQAAgAAAA5AAsABwAQAAkAAAA5AAwABwATAAUAAAA5AA0ABwATAAYAAAA5AA4ABwATAAcAAAA6AAkABwAQAAUAAAA6AAoABwAQAAYAAAA6AAsABwAQAAcAAAA6AAwABwAQAAgAAAA6AA0ABwAQAAkAAAA6AA4ABwATAAUAAAA7AAkABwARAAUAAAA7AAoABwARAAYAAAA7AAsABwARAAcAAAA7AAwABwAPAAUAAAA7AA0ABwAPAAYAAAA7AA4ABwAPAAcAAAA8AAkABwASAAUAAAA8AAoABwASAAYAAAA8AAsABwASAAcAAAA8AAwABwAQAAUAAAA8AA0ABwAQAAYAAAA8AA4ABwAQAAcAAAA9AAkABwATAAUAAAA9AAoABwATAAYAAAA9AAsABwATAAcAAAA9AAwABwARAAUAAAA9AA0ABwARAAYAAAA9AA4ABwARAAcAAAA+AAkABwAPAAcAAAA+AAoABwAPAAgAAAA+AAsABwAPAAkAAAA+AAwABwASAAUAAAA+AA0ABwASAAYAAAA+AA4ABwASAAcAAAA/AAkABwAQAAcAAAA/AAoABwAQAAgAAAA/AAsABwAQAAkAAAA/AAwABwATAAUAAAA/AA0ABwATAAYAAAA/AA4ABwATAAcAAAAzAAkABwASAAYAAAAzAAoABwASAAcAAAA0AAkABwATAAYAAAA0AAoABwATAAcAAAA0AAsABwAQAAcAAAA0AAwABwAQAAgAAAA0AA0ABwAQAAkAAAA0AA4ABwATAAUAAAA1AAkABwARAAUAAAA1AAoABwARAAYAAAA1AAsABwARAAcAAAA1AAwABwAPAAUAAAA1AA0ABwAPAAYAAAA1AA4ABwAPAAcAAAA2AAkABwASAAUAAAA2AAoABwASAAYAAAA2AAsABwASAAcAAAA2AAwABwAQAAUAAAA2AA0ABwAQAAYAAAA2AA4ABwAQAAcAAAA3AAkABwATAAUAAAA3AAoABwATAAYAAAA3AAsABwATAAcAAAA3AAwABwARAAUAAAA3AA0ABwARAAYAAAA3AA4ABwARAAcAAAA4AAkABwAPAAcAAAA4AAoABwAPAAgAAAA4AAsABwAPAAkAAAA4AAwABwASAAUAAAA4AA0ABwASAAYAAAA4AA4ABwASAAcAAAAuAAUABwAPAAUAAAAuAAYABwAPAAYAAAAuAAcABwAPAAcAAAAuAAgABwAPAAgAAAAuAAkABwAPAAkAAAAuAAoABwASAAUAAAAvAAUABwAQAAUAAAAvAAYABwAQAAYAAAAvAAcABwAQAAcAAAAvAAgABwAQAAgAAAAvAAkABwAQAAkAAAAvAAoABwATAAUAAAAwAAUABwARAAUAAAAwAAYABwARAAYAAAAwAAcABwARAAcAAAAwAAgABwAPAAUAAAAwAAkABwAPAAYAAAAwAAoABwAPAAcAAAAxAAUABwASAAUAAAAxAAYABwASAAYAAAAxAAcABwASAAcAAAAxAAgABwAQAAUAAAAxAAkABwAQAAYAAAAxAAoABwAQAAcAAAAyAAUABwATAAUAAAAyAAYABwATAAYAAAAyAAcABwATAAcAAAAyAAgABwARAAUAAAAyAAkABwARAAYAAAAyAAoABwARAAcAAAAzAAUABwAPAAcAAAAzAAYABwAPAAgAAAAzAAcABwAPAAkAAAAzAAgABwASAAUAAAA0AAUABwAQAAcAAAA0AAYABwAQAAgAAAA0AAcABwAQAAkAAAA0AAgABwATAAUAAAAuAP//BwAPAAUAAAAuAAAABwAPAAYAAAAuAAEABwAPAAcAAAAuAAIABwAPAAgAAAAuAAMABwAPAAkAAAAuAAQABwASAAUAAAAvAP//BwAQAAUAAAAvAAAABwAQAAYAAAAvAAEABwAQAAcAAAAvAAIABwAQAAgAAAAvAAMABwAQAAkAAAAvAAQABwATAAUAAAAwAP//BwARAAUAAAAwAAAABwARAAYAAAAwAAEABwARAAcAAAAwAAIABwAPAAUAAAAwAAMABwAPAAYAAAAwAAQABwAPAAcAAAAxAP//BwASAAUAAAAxAAAABwASAAYAAAAxAAEABwASAAcAAAAxAAIABwAQAAUAAAAxAAMABwAQAAYAAAAxAAQABwAQAAcAAAAyAP//BwAPAAcAAAAyAAAABwAPAAgAAAAyAAEABwAPAAkAAAAyAAIABwASAAUAAAAyAAMABwARAAYAAAAyAAQABwARAAcAAAAzAP//BwAQAAcAAAAzAAAABwAQAAgAAAAzAAEABwAQAAkAAAAzAAIABwATAAUAAAAzAAMABwASAAYAAAAzAAQABwASAAcAAAA0AP//BwARAAcAAAA0AAAABwAPAAUAAAA0AAEABwAPAAYAAAA0AAIABwAPAAcAAAA0AAMABwATAAYAAAA0AAQABwATAAcAAAA1AAMABwAPAAUAAAA1AAQABwAPAAYAAAA1AAUABwAPAAcAAAA1AAYABwAPAAgAAAA1AAcABwAPAAkAAAA1AAgABwASAAUAAAA2AAMABwAQAAUAAAA2AAQABwAQAAYAAAA2AAUABwAQAAcAAAA2AAYABwAQAAgAAAA2AAcABwAQAAkAAAA2AAgABwATAAUAAAA3AAMABwARAAUAAAA3AAQABwARAAYAAAA3AAUABwARAAcAAAA3AAYABwAPAAUAAAA3AAcABwAPAAYAAAA3AAgABwAPAAcAAAA4AAMABwASAAUAAAA4AAQABwASAAYAAAA4AAUABwASAAcAAAA4AAYABwAQAAUAAAA4AAcABwAQAAYAAAA4AAgABwAQAAcAAAA5AAMABwAPAAUAAAA5AAQABwAPAAYAAAA5AAUABwAPAAcAAAA5AAYABwAPAAgAAAA5AAcABwAPAAkAAAA5AAgABwASAAUAAAA6AAMABwAQAAUAAAA6AAQABwAQAAYAAAA6AAUABwAQAAcAAAA6AAYABwAQAAgAAAA6AAcABwAQAAkAAAA6AAgABwATAAUAAAA7AAMABwARAAUAAAA7AAQABwARAAYAAAA7AAUABwARAAcAAAA7AAYABwAPAAUAAAA7AAcABwAPAAYAAAA7AAgABwAPAAcAAAA8AAMABwASAAUAAAA8AAQABwASAAYAAAA8AAUABwASAAcAAAA8AAYABwAQAAUAAAA8AAcABwAQAAYAAAA8AAgABwAQAAcAAAA9AAMABwATAAUAAAA9AAQABwATAAYAAAA9AAUABwATAAcAAAA9AAYABwARAAUAAAA9AAcABwARAAYAAAA9AAgABwARAAcAAAA+AAMABwAPAAcAAAA+AAQABwAPAAgAAAA+AAUABwAPAAkAAAA+AAYABwASAAUAAAA+AAcABwASAAYAAAA+AAgABwASAAcAAAA/AAMABwAQAAcAAAA/AAQABwAQAAgAAAA/AAUABwAQAAkAAAA/AAYABwATAAUAAAA/AAcABwATAAYAAAA/AAgABwATAAcAAAA5AP3/BwAPAAUAAAA5AP7/BwAPAAYAAAA5AP//BwAPAAcAAAA5AAAABwAPAAgAAAA5AAEABwAPAAkAAAA5AAIABwASAAUAAAA6AP3/BwAQAAUAAAA6AP7/BwAQAAYAAAA6AP//BwAQAAcAAAA6AAAABwAQAAgAAAA6AAEABwAQAAkAAAA6AAIABwATAAUAAAA7AP3/BwARAAUAAAA7AP7/BwARAAYAAAA7AP//BwARAAcAAAA7AAAABwAPAAUAAAA7AAEABwAPAAYAAAA7AAIABwAPAAcAAAA8AP3/BwASAAUAAAA8AP7/BwASAAYAAAA8AP//BwASAAcAAAA8AAAABwAQAAUAAAA8AAEABwAQAAYAAAA8AAIABwAQAAcAAAA9AP3/BwATAAUAAAA9AP7/BwATAAYAAAA9AP//BwATAAcAAAA9AAAABwARAAUAAAA9AAEABwARAAYAAAA9AAIABwARAAcAAAA+AP3/BwAPAAcAAAA+AP7/BwAPAAgAAAA+AP//BwAPAAkAAAA+AAAABwASAAUAAAA+AAEABwASAAYAAAA+AAIABwASAAcAAAA/AP3/BwAQAAcAAAA/AP7/BwAQAAgAAAA/AP//BwAQAAkAAAA/AAAABwATAAUAAAA/AAEABwATAAYAAAA/AAIABwATAAcAAAAyAP3/BwAPAAUAAAAyAP7/BwAPAAYAAAAzAP3/BwAQAAUAAAAzAP7/BwAQAAYAAAA0AP3/BwARAAUAAAA0AP7/BwARAAYAAAA1AP3/BwASAAUAAAA1AP7/BwASAAYAAAA1AP//BwASAAcAAAA1AAAABwAQAAUAAAA1AAEABwAQAAYAAAA1AAIABwAQAAcAAAA2AP3/BwATAAUAAAA2AP7/BwATAAYAAAA2AP//BwATAAcAAAA2AAAABwARAAUAAAA2AAEABwARAAYAAAA2AAIABwARAAcAAAA3AP3/BwAPAAcAAAA3AP7/BwAPAAgAAAA3AP//BwAPAAkAAAA3AAAABwASAAUAAAA3AAEABwASAAYAAAA3AAIABwASAAcAAAA4AP3/BwAQAAcAAAA4AP7/BwAQAAgAAAA4AP//BwAQAAkAAAA4AAAABwATAAUAAAA4AAEABwATAAYAAAA4AAIABwATAAcAAABAAAsABwAPAAUAAABAAAwABwAPAAYAAABAAA0ABwAPAAcAAABAAA4ABwAPAAgAAABAAA8ABwAPAAkAAABAABAABwASAAUAAABBAAsABwAQAAUAAABBAAwABwAQAAYAAABBAA0ABwAQAAcAAABBAA4ABwAQAAgAAABBAA8ABwAQAAkAAABBABAABwATAAUAAABCAAsABwARAAUAAABCAAwABwARAAYAAABCAA0ABwARAAcAAABCAA4ABwAPAAUAAABCAA8ABwAPAAYAAABCABAABwAPAAcAAABDAAsABwASAAUAAABDAAwABwASAAYAAABDAA0ABwASAAcAAABDAA4ABwAQAAUAAABDAA8ABwAQAAYAAABDABAABwAQAAcAAABEAAsABwATAAUAAABEAAwABwATAAYAAABEAA0ABwATAAcAAABEAA4ABwARAAUAAABEAA8ABwARAAYAAABEABAABwARAAcAAABFAAsABwAPAAcAAABFAAwABwAPAAgAAABFAA0ABwAPAAkAAABFAA4ABwASAAUAAABFAA8ABwASAAYAAABFABAABwASAAcAAABGAAsABwAQAAcAAABGAAwABwAQAAgAAABGAA0ABwAQAAkAAABGAA4ABwATAAUAAABGAA8ABwATAAYAAABGABAABwATAAcAAABHAAsABwAPAAUAAABHAAwABwAPAAYAAABHAA0ABwAPAAcAAABHAA4ABwAPAAgAAABHAA8ABwAPAAkAAABHABAABwASAAUAAABIAAsABwAQAAUAAABIAAwABwAQAAYAAABIAA0ABwAQAAcAAABIAA4ABwAQAAgAAABIAA8ABwAQAAkAAABIABAABwATAAUAAABJAAsABwARAAUAAABJAAwABwARAAYAAABJAA0ABwARAAcAAABJAA4ABwAPAAUAAABJAA8ABwAPAAYAAABJABAABwAPAAcAAABKAAsABwASAAUAAABKAAwABwASAAYAAABKAA0ABwASAAcAAABKAA4ABwAQAAUAAABKAA8ABwAQAAYAAABKABAABwAQAAcAAABLAAsABwATAAUAAABLAAwABwATAAYAAABLAA0ABwATAAcAAABLAA4ABwARAAUAAABLAA8ABwARAAYAAABLABAABwARAAcAAABMAAsABwAPAAcAAABMAAwABwAPAAgAAABMAA0ABwAPAAkAAABMAA4ABwASAAUAAABMAA8ABwASAAYAAABMABAABwASAAcAAABNAAsABwAQAAcAAABNAAwABwAQAAgAAABNAA0ABwAQAAkAAABNAA4ABwATAAUAAABNAA8ABwATAAYAAABNABAABwATAAcAAABOAAsABwAPAAUAAABOAAwABwAPAAYAAABOAA0ABwAPAAcAAABOAA4ABwAPAAgAAABOAA8ABwAPAAkAAABOABAABwASAAUAAABPAAsABwAQAAUAAABPAAwABwAQAAYAAABPAA0ABwAQAAcAAABPAA4ABwAQAAgAAABPAA8ABwAQAAkAAABPABAABwATAAUAAABQAAsABwARAAUAAABQAAwABwARAAYAAABQAA0ABwARAAcAAABQAA4ABwAPAAUAAABQAA8ABwAPAAYAAABQABAABwAPAAcAAABRAAsABwASAAUAAABRAAwABwASAAYAAABRAA0ABwASAAcAAABRAA4ABwAQAAUAAABRAA8ABwAQAAYAAABRABAABwAQAAcAAABSAAsABwATAAUAAABSAAwABwATAAYAAABSAA0ABwATAAcAAABSAA4ABwARAAUAAABSAA8ABwARAAYAAABSABAABwARAAcAAABTAAsABwAPAAcAAABTAAwABwAPAAgAAABTAA0ABwAPAAkAAABTAA4ABwASAAUAAABTAA8ABwASAAYAAABTABAABwASAAcAAABUAAsABwAPAAUAAABUAAwABwAPAAYAAABUAA0ABwAPAAcAAABUAA4ABwAPAAgAAABUAA8ABwAPAAkAAABUABAABwASAAUAAABVAAsABwAQAAUAAABVAAwABwAQAAYAAABVAA0ABwAQAAcAAABVAA4ABwAQAAgAAABVAA8ABwAQAAkAAABVABAABwATAAUAAABWAAsABwARAAUAAABWAAwABwARAAYAAABWAA0ABwARAAcAAABWAA4ABwAPAAUAAABWAA8ABwAPAAYAAABWABAABwAPAAcAAABXAAsABwASAAUAAABXAAwABwASAAYAAABXAA0ABwASAAcAAABXAA4ABwAQAAUAAABXAA8ABwAQAAYAAABXABAABwAQAAcAAABYAAsABwATAAUAAABYAAwABwATAAYAAABYAA0ABwATAAcAAABYAA4ABwARAAUAAABYAA8ABwARAAYAAABYABAABwARAAcAAABZAAsABwAPAAcAAABZAAwABwAPAAgAAABZAA0ABwAPAAkAAABZAA4ABwASAAUAAABZAA8ABwASAAYAAABZABAABwASAAcAAABaAAsABwAQAAcAAABaAAwABwAQAAgAAABaAA0ABwAQAAkAAABaAA4ABwATAAUAAABaAA8ABwATAAYAAABaABAABwATAAcAAAA=")
tile_set = ExtResource("2_gweau")

[node name="TileMapFg" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFABQAAQALAAkAAAAGABQAAQALAAkAAAAHABQAAQALAAkAAAAIABQAAQALAAkAAAAJABQAAQALAAkAAAAKABQAAQALAAkAAAALABQAAQALAAkAAAAMABQAAQALAAkAAAANABQAAQALAAkAAAAOABQAAQALAAkAAAAPABQAAQALAAkAAAAQABQAAQALAAkAAAARABQAAQALAAkAAAASABQAAQALAAkAAAATABQAAQALAAkAAAAUABQAAQALAAkAAAAVABMAAQAKAAoAAAAVABIAAQAKAAoAAAAVABEAAQAKAAkAAAAWABEAAQALAAkAAAAXABEAAQALAAkAAAAYABEAAQALAAkAAAAZABEAAQALAAkAAAAaABEAAQALAAkAAAAbABEAAQALAAkAAAAcABEAAQALAAkAAAAdABEAAQALAAkAAAAeABEAAQALAAkAAAAfABEAAQALAAkAAAAgABEAAQALAAkAAAAhABEAAQALAAkAAAAEABQAAQALAAkAAAADABMAAQAMAAoAAAADABIAAQAMAA4AAAADABEAAQAMAA4AAAADABAAAQAMAAoAAAADAA8AAQAMAAoAAAADAA4AAQAMAA4AAAADAA0AAQAMAA4AAAADAAwAAQAMAAoAAAAEAAsAAQALAAsAAAAFAAsAAQALAAsAAAAGAAsAAQALAAsAAAAHAAsAAQALAAsAAAAIAAsAAQALAAsAAAAJAAsAAQALAAsAAAAKAAsAAQALAAsAAAALAAsAAQALAAsAAAAMAAsAAQALAAsAAAANAAsAAQALAAsAAAAOAAsAAQALAAsAAAAPAAsAAQALAAsAAAAQAAsAAQALAAsAAAARAAsAAQALAAsAAAASAAsAAQALAAsAAAATAAsAAQALAAsAAAAUAAsAAQALAAsAAAAVAAsAAQALAAsAAAAWAAsAAQALAAsAAAAXAAsAAQALAAsAAAAYAAsAAQALAAsAAAAZAAsAAQALAAsAAAAaAAsAAQALAAsAAAAbAAsAAQALAAsAAAAcAAsAAQALAAsAAAAdAAsAAQALAAsAAAAeAAsAAQALAAsAAAAfAAsAAQALAAsAAAAgAAsAAQALAAsAAAAhAAsAAQALAAsAAAAiAAsAAQALAAsAAAAjAAsAAQALAAsAAAAkAAsAAQALAAsAAAAlAAsAAQALAAsAAAAmAAsAAQALAAsAAAAnAAsAAQALAAsAAAAoAAsAAQALAAsAAAApAAsAAQALAAsAAAAqAAsAAQALAAsAAAArAAsAAQALAAsAAAAsAAsAAQALAAsAAAAtAAsAAQAMAAsAAAAiABEAAQALAAkAAAAjABEAAQALAAkAAAAkABEAAQALAAkAAAAlABEAAQALAAkAAAAmABEAAQALAAkAAAAnABEAAQALAAkAAAAoABEAAQALAAkAAAApABEAAQALAAkAAAAqABEAAQALAAkAAAArABEAAQALAAkAAAAsABEAAQALAAkAAAAtABEAAQAMAAkAAAAxABAAAQAKAAwAAAARABIAAQALABEAAAARABMAAQALABMAAAASABIAAQANABEAAAASABMAAQANABMAAAAtABMAAQAMAAoAAAAtABIAAQAMAAoAAAAtABQAAQAMAA4AAAAuABQAAQADAAkAAAAvABQAAQADAAkAAAAwABQAAQADAAkAAAAxABQAAQADAAkAAAAyABQAAQADAAkAAAAzABQAAQADAAkAAAA0ABQAAQADAAkAAAA1ABQAAQADAAkAAAA2ABQAAQADAAkAAAA3ABQAAQADAAkAAAA4ABQAAQADAAkAAAA5ABQAAQADAAkAAAA6ABQAAQADAAkAAAA7ABQAAQADAAkAAAA8ABQAAQADAAkAAAA9ABQAAQADAAkAAAA+ABQAAQADAAkAAAA/ABQAAQAKAAoAAAA/ABIAAQAKAAoAAAA/ABMAAQAKAA4AAAA/ABAAAQAKAAkAAAA/ABEAAQAKAAoAAABAABAAAQALAAkAAABBABAAAQALAAkAAABCABAAAQALAAkAAABDABAAAQALAAkAAABEABAAAQALAAkAAABFABAAAQALAAkAAABGABAAAQALAAkAAABHABAAAQALAAkAAABIABAAAQALAAkAAABJABAAAQALAAkAAABKABAAAQALAAkAAABLABAAAQALAAkAAABMABAAAQALAAkAAABNABAAAQALAAkAAABOABAAAQALAAkAAABPABAAAQALAAkAAABQABAAAQALAAkAAABRABAAAQALAAkAAABSABAAAQALAAkAAABTABAAAQALAAkAAAAyABAAAQALAAwAAAAzABAAAQALAAwAAAA0ABAAAQALAAwAAAA1ABAAAQALAAwAAAA2ABAAAQALAAwAAAA3ABAAAQALAAwAAAA4ABAAAQALAAwAAAA5ABAAAQALAAwAAAAtAAgAAQAMAAoAAAAtAAYAAQAMAAoAAAAtAAkAAQAMAA4AAAAtAAcAAQAMAA4AAAAtAAUAAQAMAAkAAAA6ABAAAQAMAAwAAAAuAAoAAQALAAwAAAAvAAoAAQALAAwAAABUABAAAQALAAkAAABVABAAAQALAAkAAABWABAAAQALAAkAAABXABAAAQALAAkAAABYABAAAQALAAkAAABZABAAAQALAAkAAABaAA8AAQAKAAoAAABaAA4AAQAKAA4AAABaAA0AAQAKAAoAAAA/AAkAAQAKAAoAAAA/AAgAAQAKAAoAAAA/AAQAAQAKAAoAAAA/AAYAAQAKAAoAAAA/AAoAAQAKAAsAAAA/AAcAAQAKAA4AAAA/AAUAAQAKAA4AAAA/AAMAAQAKAA4AAABAAAoAAQALAAsAAABBAAoAAQALAAsAAABCAAoAAQALAAsAAABDAAoAAQALAAsAAABEAAoAAQALAAsAAABFAAoAAQALAAsAAABGAAoAAQALAAsAAABHAAoAAQALAAsAAABIAAoAAQALAAsAAABJAAoAAQALAAsAAABKAAoAAQALAAsAAABLAAoAAQALAAsAAABMAAoAAQALAAsAAABNAAoAAQALAAsAAABOAAoAAQALAAsAAABPAAoAAQALAAsAAABQAAoAAQALAAsAAABRAAoAAQALAAsAAABSAAoAAQALAAsAAABTAAoAAQALAAsAAABUAAoAAQALAAsAAABVAAoAAQALAAsAAABWAAoAAQALAAsAAABXAAoAAQALAAsAAABYAAoAAQALAAsAAABZAAoAAQALAAsAAABaAAsAAQAKAAoAAABaAAwAAQAKAAoAAABaABAAAQALAAAAAAAwAAoAAQALAAwAAAAxAAoAAQALAAwAAAAyAAoAAQALAAwAAAAzAAoAAQAMAAwAAAA5AA0AAQAKAAwAAAA6AA0AAQALAAwAAAA7AA0AAQAMAAwAAAA1AAsAAQAKAAwAAAA2AAsAAQALAAwAAAA3AAsAAQAMAAwAAAAsAAUAAQALAAkAAAArAAUAAQALAAkAAAAqAAUAAQALAAkAAAApAAUAAQALAAkAAAAoAAUAAQALAAkAAAAnAAUAAQALAAkAAAAmAAUAAQALAAkAAAAlAAUAAQALAAkAAAAkAAUAAQALAAkAAAAjAAUAAQALAAkAAAAiAAUAAQALAAkAAAAhAAUAAQALAAkAAAAgAAUAAQALAAkAAAAfAAUAAQALAAkAAAAeAAUAAQALAAkAAAAdAAUAAQALAAkAAAAcAAUAAQALAAkAAAAbAAUAAQALAAkAAAAaAAUAAQALAAkAAAAZAAUAAQALAAkAAAAYAAUAAQALAAkAAAAXAAUAAQALAAkAAAAWAAUAAQALAAkAAAAVAAUAAQALAAkAAAAUAAUAAQALAAkAAAATAAUAAQALAAkAAAASAAUAAQALAAkAAAARAAUAAQALAAkAAAAQAAUAAQALAAkAAAAPAAUAAQALAAkAAAAOAAUAAQALAAkAAAANAAUAAQALAAkAAAAMAAUAAQALAAkAAAALAAUAAQALAAkAAAAKAAUAAQALAAkAAAAJAAUAAQALAAkAAAAIAAUAAQALAAkAAAAHAAUAAQALAAkAAAAGAAUAAQALAAkAAAAFAAUAAQALAAkAAAAEAAUAAQALAAkAAAAvAAcAAQAOABEAAAAvAAgAAQAOABIAAAAvAAkAAQAOABMAAAAwAAcAAQAPABEAAAAwAAgAAQAPABIAAAAwAAkAAQAPABMAAAAxAAcAAQAQABEAAAAxAAgAAQAQABIAAAAxAAkAAQAQABMAAAAyAAMAAQAKAAwAAAAzAAMAAQAMAAwAAAA=")
tile_set = ExtResource("2_gweau")

[node name="HUD" parent="." instance=ExtResource("3_dcj0v")]

[node name="Control" parent="HUD" instance=ExtResource("4_h7y03")]
offset_left = 1020.0
offset_top = 476.0
offset_right = -72.0
offset_bottom = -62.0

[node name="Player" parent="." instance=ExtResource("2_hjpl8")]
z_index = 1
position = Vector2(119, 282)

[node name="Robot" parent="." instance=ExtResource("6_e6ugf")]
position = Vector2(153, 314)

[node name="Door" parent="Robot" instance=ExtResource("7_tajpv")]
position = Vector2(1030, -73)

[node name="traps" type="Node" parent="."]

[node name="lightningTrap" parent="traps" instance=ExtResource("6_8kqr7")]
position = Vector2(1260, 389)

[node name="energyCells" type="Node" parent="."]

[node name="energyCell" parent="energyCells" instance=ExtResource("3_vr2fn")]
position = Vector2(322, 306)

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("4_f85k4")]
position = Vector2(237, 212)

[node name="Coin2" parent="Coins" instance=ExtResource("4_f85k4")]
position = Vector2(406, 213)

[node name="Coin3" parent="Coins" instance=ExtResource("4_f85k4")]
position = Vector2(422, 213)

[node name="Coin4" parent="Coins" instance=ExtResource("4_f85k4")]
position = Vector2(437, 213)

[node name="Coin5" parent="Coins" instance=ExtResource("4_f85k4")]
position = Vector2(701, 76)

[node name="Note" parent="." instance=ExtResource("7_vodip")]
position = Vector2(1394, 238)

[node name="Terminal" parent="." instance=ExtResource("3_6rbj2")]
position = Vector2(1263, 478)

[node name="CanvasLayer" parent="." instance=ExtResource("10_w0wpa")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("12_dtm37")]
visible = false

[node name="Journal" parent="CanvasLayer" instance=ExtResource("12_bdk26")]
visible = false

[node name="pipeconnect_panel" parent="CanvasLayer" instance=ExtResource("12_sa43d")]
visible = false

[connection signal="die" from="traps/lightningTrap" to="." method="_on_lightning_trap_die"]
[connection signal="load_note_panel" from="Note" to="." method="_on_note_load_note_panel"]
[connection signal="load_terminal_panel" from="Terminal" to="." method="_on_terminal_interacted"]
[connection signal="close_note_panel" from="CanvasLayer/Journal" to="." method="_on_journal_close_note_panel"]
[connection signal="pressed" from="CanvasLayer/pipeconnect_panel/terminal_panel/Panel/TextureRect/Exit" to="CanvasLayer/pipeconnect_panel" method="_on_exit_pressed"]

[editable path="CanvasLayer/pipeconnect_panel"]
[editable path="CanvasLayer/pipeconnect_panel/terminal_panel"]
